tidied change_forms.

--- a/cyclope/templates/admin/change_form.html
+++ b/cyclope/templates/admin/change_form.html
@@ -5,56 +5,13 @@
 {% url admin:jsi18n as jsi18nurl %}
 <script type="text/javascript" src="{{ jsi18nurl|default:"../../../jsi18n/" }}"></script>
 {{ media }}
-<script type="text/javascript" src="{{CYCLOPE_MEDIA_URL}}js/reuse_django_jquery.js"></script>
-<script type="text/javascript" src="{{CYCLOPE_MEDIA_URL}}js/jquery.chainedSelect.js"></script>
+<script type="text/javascript" src="{{ CYCLOPE_MEDIA_URL }}js/reuse_django_jquery.js"></script>
+<script type="text/javascript" src="{{ CYCLOPE_MEDIA_URL }}js/jquery.chainedSelect.js"></script>
 {% endblock %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% admin_media_prefix %}css/forms.css" />
-<style type="text/css">
-#collection-tabs-container {
-    border-bottom: 6px #abd solid;
-    padding-bottom: 0px;
-    margin-bottom: 0px;
-}
-
-#collection-tabs-list a{
-    color: #557;
-}
-
-#collection-tabs-list {
-    list-style-type: none;
-    padding: 0px;
-    margin: 0px;
-}
-
-.tab, .current-tab {
-    background-color: white;
-    border-top: 3px white solid;
-    border-left: 3px white solid;
-    border-right: 3px white solid;
-    display: inline-block;
-    font-size: 14px;
-    font-weight: bold;
-    position: relative;
-    padding: 5px 8px;
-    margin-left: 5px;
-    border-left: 1px #abd solid;
-    border-right: 1px #abd solid;
-    border-top: 1px #abd solid;
-}
-
-.tab:hover, .current-tab{
-    background-color: #abd;
-    color: #446;
-}
-
-#collection-tabs-list li:hover a,
-#collection-tabs-list li.current-tab a{
-    color: white;
-}
-
-
-</style>
+{% block extrastyle %}
+{{ block.super }}
+<link rel="stylesheet" type="text/css" href="{% admin_media_prefix %}css/forms.css" />
 {% endblock %}
 
 {% block coltype %}{% if ordered_objects %}colMS{% else %}colM{% endif %}{% endblock %}
@@ -99,206 +56,6 @@
 {% endfor %}
 
 {% block after_related_objects %}
-
-
-
-{% comment %}
-CYCLOPE: All chainSelect configuration for every particular model that needs it is done here.
-{% endcomment %}
-
-
-{% comment %} CYCLOPE:  chainedSelect for Collectible derived clases {% endcomment %}
-<script type="text/javascript">
-//<![CDATA[
-function setup_chainedSelect_for_categorization(i) {
-    $("#id_collections-categorization-content_type-object_id-"+ i +"-category").chainedSelect({
-        parent: '#id_collections-categorization-content_type-object_id-'+ i +'-collection',
-        url: "/{{CYCLOPE_PREFIX}}collection_categories_json",
-        value: 'category_id',
-        label: 'category_name'
-    });
-};
-
-jQuery(document).ready(function($){
-  $("select[id^='id_collections-categorization-content_type-object_id-'][id$='-category']").each(function(i, sel){
-        setup_chainedSelect_for_categorization(i);
-  });
-
-  $("#collections-categorization-content_type-object_id-group .add-row a").click(
-    function(){
-      i = $("select[id^='id_collections-categorization-content_type-object_id-'][id$='-category']").length - 2
-      setup_chainedSelect_for_categorization(i);
-    });
-});
-//]]>
-</script>
-
-{% comment %} CYCLOPE: chainedSelect for Layout {% endcomment %}
-
-<script type="text/javascript">
-//<![CDATA[
-
-  function setup_chainedSelect_for_layout(i) {
-      $("#id_regionview_set-" + i + "-region").chainedSelect({
-          parent: '#id_template',
-          url: '/{{CYCLOPE_PREFIX}}layout_regions_json',
-          value: 'region_name',
-          label: 'verbose_name'
-      });
-
-      $("#id_regionview_set-" + i + "-content_view").chainedSelect({
-          parent: '#id_regionview_set-' + i + '-content_type',
-          url: '/{{CYCLOPE_PREFIX}}registered_region_views_json',
-          value: 'view_name',
-          label: 'verbose_name'
-      });
-
-      $("#id_regionview_set-" + i + "-object_id").chainedSelect({
-          parent: '#id_regionview_set-' + i + '-content_type',
-          url: '/{{CYCLOPE_PREFIX}}objects_for_ctype_json',
-          value: 'object_id',
-          label: 'verbose_name'
-      });
-  }
-
-  jQuery(document).ready(function($){
-      $("select[id^='id_regionview_set-'][id$='-region']").each(function(i, sel){
-          setup_chainedSelect_for_layout(i);
-      });
-
-      $("#regionview_set-group .add-row a").click(function() {
-        setup_chainedSelect_for_layout($("select[id^='id_regionview_set-'][id$='-region']").length - 2);
-    });
-  });
-//]]>
-</script>
-
-{% comment %} CYCLOPE: chainedSelect for MenuItem {% endcomment %}
-
-<script type="text/javascript">
-//<![CDATA[
-$(function() {
-  $("#id_content_view").chainedSelect({
-        parent: '#id_content_type',
-        url: '/{{CYCLOPE_PREFIX}}registered_standard_views_json',
-        value: 'view_name',
-        label: 'verbose_name'
-    });
-
-  $("#id_object_id").chainedSelect({
-        parent: '#id_content_type',
-        // this /cyclope/ url should not be hard_coded here
-        url: '/{{CYCLOPE_PREFIX}}objects_for_ctype_json',
-        value: 'object_id',
-        label: 'verbose_name'
-      });
-
-    $.cyclope = {
-        access_number : 0,
-    };
-
-    var div_container = $("#view_options_multiple").parent().parent();
-    if ($("#view_options_multiple").html() === ""){
-        div_container.hide();
-    }
-
-    $("#id_content_view").change(function() {
-        $.cyclope.access_number += 1;
-        if ($.cyclope.access_number >= 3){
-            /*
-            $.cyclope.access_number >= 3 because 2 changes are made by the
-            cainedSelect in page load. So the third is the first change made by
-            the user.
-            */
-            var view_name = $("#id_content_view option:selected").val();
-            var content_type_id = $("#id_content_type option:selected").val();
-            // $("#view_options_multiple").parent().parent().hide();
-            if (view_name && content_type_id){
-                $.get("/{{CYCLOPE_PREFIX}}options_view_widget_html",
-                   { content_type_id: content_type_id, view_name: view_name },
-                   function(data){
-                       if (data){
-                            $("#view_options_multiple").replaceWith(data);
-                            div_container.show();
-                        }
-                        else{
-                            $("#view_options_multiple").html("");
-                            div_container.hide();
-                        }
-                   });
-            }
-        }
-
-
-    });
-
-});
-//]]>
-</script>
-
-{% comment %} CYCLOPE: Change parent for MenuItem when menu is changed {% endcomment %}
-
-<script type="text/javascript">
-//<![CDATA[
-$(function() {
-  $("#id_parent").chainedSelect({
-        parent: '#id_menu',
-        url: '/{{CYCLOPE_PREFIX}}menu_items_for_menu_json',
-        value: 'object_id',
-        label: 'verbose_name'
-    });
-
-});
-//]]>
-</script>
-
-{% comment %} CYCLOPE: Change parent for Category when collection is changed {% endcomment %}
-
-<script type="text/javascript">
-//<![CDATA[
-$(function() {
-  $("#id_parent").chainedSelect({
-        parent: '#id_collection',
-        url: '/{{CYCLOPE_PREFIX}}collection_categories_json',
-        value: 'category_id',
-        label: 'category_name'
-    });
-
-});
-//]]>
-</script>
-
-{% comment %} CYCLOPE: chainedSelect for RelatedContent {% endcomment %}
-
-<script type="text/javascript">
-//<![CDATA[
-function setup_chainedSelect_for_relatedcontent(i) {
-    $('#id_cyclope-relatedcontent-self_type-self_id-'+ i +'-other_id').chainedSelect({
-        parent: '#id_cyclope-relatedcontent-self_type-self_id-'+ i +'-other_type',
-        url: "/{{CYCLOPE_PREFIX}}objects_for_ctype_json",
-        value: 'object_id',
-        label: 'verbose_name'
-    });
-};
-
-jQuery(document).ready(function($){
-  $("select[id^='id_cyclope-relatedcontent-self_type-self_id-'][id$='-other_id']").each(function(i, sel){
-        setup_chainedSelect_for_relatedcontent(i);
-  });
-
-  $("#cyclope-relatedcontent-self_type-self_id-group .add-row a").click(
-    function(){
-      i = $("select[id^='id_cyclope-relatedcontent-self_type-self_id-'][id$='-other_id']").length - 2
-      setup_chainedSelect_for_relatedcontent(i);
-    });
-});
-//]]>
-</script>
-
-{% if original.related_contents.count >= 0 %}
-    <script type="text/javascript" src="/media/cyclope/js/drag_drop.js"></script>
-{% endif %}
-
 {% endblock %}
 
 {% submit_row %}
@@ -310,68 +67,6 @@ jQuery(document).ready(function($){
 {# JavaScript for prepopulated fields #}
 {% prepopulated_fields_js %}
 
-{# TODO(nicoechaniz): the collection tabs code is messy. needs lots of love but it works... #}
-<script type="text/javascript">
-<<<<<<< local
-//<![CDATA[
-
-jQuery(document).ready(function($){
-
-    var current_collection = null;
-
-    var select_collection = function (collection){
-        $("select[id^='id_collections-categorization-content_type-object_id-'][id$='-collection']")
-            .each(function(){
-                if (this.value != collection){
-                    $(this).closest('.inline-related').hide();
-                }
-                else{
-                    $(this).closest('.inline-related').show()
-                }
-            });
-        current_collection = collection;
-
-        $('li[id^=id_collections-tab-]').each(function(i){
-            $(this).removeClass('current-tab')
-        });
-
-        $('#id_collections-tab-'+ collection).addClass('current-tab');
-    }
-
-    var initial = $("select[id^='id_collections-categorization-content_type-object_id-'][id$='-collection']").val();
-    $('#collections-categorization-content_type-object_id-group h2').after('<div id="collection-tabs-container"><ul id="collection-tabs-list"></ul></div>');
-
-    $('#id_collections-categorization-content_type-object_id-__prefix__-collection option')
-        .each(function(i){
-            if (this.text.match(/-+/g) != this.text){
-                var collection = this.value
-                var link_id = "id_collections-tab-"+ collection //$(this).parent().attr('id')
-                $('#collection-tabs-list').append('<li class="tab" id="'+link_id+'"><a href="javascript:void(0)" >'+this.text+'</a></li>');
-//                $('#collections-categorization-content_type-object_id-group h2').after('<span class="collection-tab" ><a href="javascript:void(0)" id="'+link_id+'" >'+this.text+'</a></span>');
-
-                $("#"+link_id).click(function(){
-                    select_collection(collection);
-                });
-            }
-        });
-
-    $('#collections-categorization-content_type-object_id-group > .add-row a')
-        .click(function(){
-            i = $("select[id^='id_collections-categorization-content_type-object_id-'][id$='-collection']").length - 2
-            sel = '#id_collections-categorization-content_type-object_id-'+i+'-collection'
-            $(sel).val(current_collection);
-            select_collection(current_collection);
-            $(sel).change();
-            $(sel).parents(".collection").hide();
-        });
-
-    select_collection(initial);
-
-    $(".dynamic-collections-categorization-content_type-object_id .collection").hide();
-
-})
-//]]>
-</script>
 
 </div>
 </form></div>
