--- a/cyclope/apps/polls/templates/admin/polls/change_form.html
+++ b/cyclope/apps/polls/templates/admin/polls/change_form.html
@@ -1,5 +1,6 @@
 {% extends 'admin/change_form.html' %}
 
 {% block after_related_objects %}
-    <script type="text/javascript" src="/media/cyclope/js/drag_drop.js" />
+    <script type="text/javascript" src="/media/cyclope/js/drag_drop.js">
+    </script>
 {% endblock %}
