minor modification to layout middleware. adapted django-live template.

--- a/cyclope/templates/live/base.html
+++ b/cyclope/templates/live/base.html
@@ -1,3 +1,3 @@
-{% extends CYCLOPE_DEFAULT_TEMPLATE %}
+{% extends request.session.layout_template %}
 
-{# host_template #}
+{# this will just insert a Live view in the host_template #}
