added related contents block to staticpage detail template

--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_detail.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_detail.html
@@ -20,6 +20,9 @@ When showing the StaticPage as the main content of the view, the host_template i
           {% endif %}
         {% endif %}
     {% endif %}
+
+  {% include 'cyclope/related_contents_block.html' %}
+
 </div>
 
 {% endblock content%}
