--- a/cyclope/templates/admin/feincms/tree_editor.html
+++ b/cyclope/templates/admin/feincms/tree_editor.html
@@ -10,7 +10,7 @@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.7/jquery-ui.min.js"></script>
 {% else %}
-{# <script type="text/javascript" src="{{ FEINCMS_ADMIN_MEDIA }}jquery-1.4.4.min.js"></script> #} {# we use django's jquery #}
+<script type="text/javascript" src="{{ FEINCMS_ADMIN_MEDIA }}jquery-1.5.1.min.js"></script>
 <script type="text/javascript" src="{{ FEINCMS_ADMIN_MEDIA }}jquery-ui-1.8.7.custom.min.js"></script>
 {% endif %}
 <script type="text/javascript">
