--- a/cyclope/templates/cyclope/site_search_box.html
+++ b/cyclope/templates/cyclope/site_search_box.html
@@ -30,7 +30,7 @@
     <input type="hidden" name="models" value="{{model.get_app_label}}.{{model.get_object_name}}" />
     {% endfor %}
     <input type="text" value="{% trans "Site wide search" %}" title="{% trans "Site wide search" %}" name="q" class="cleardefault"/>
-    <input type="submit" value="ok" class="submit"/>
+    <input type="submit" value=" " class="submit"/>
   </form>
 </div>
 {% endblock %}
