--- a/cyclope/apps/medialibrary/templates/medialibrary/media_detail_header.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/media_detail_header.html
@@ -5,17 +5,7 @@
   <h1 class="title">{{ current_object.name }}</h1>
 
   <!-- herramientas -->
- {% get_comment_count for current_object as comment_count %}
-  <div class="meta-content tools">
-    <ul>
-      {% if comment_count %}
-      <li class="first">
-        <a href="#comments" class="comments_link">Comentarios ({{ comment_count }})</a>
-      </li>
-      {% endif %}
-    </ul>
-  </div>
-  <!-- /herramientas -->
+  {% include 'cyclope/content_tools_block.html' %}
 
   <!-- author -->
   {% if current_object.author %}
