--- a/cyclope/templates/admin/cyclope/layout/change_form.html
+++ b/cyclope/templates/admin/cyclope/layout/change_form.html
@@ -39,7 +39,52 @@
 
       $("#regionview_set-group .add-row a").click(function() {
         setup_chainedSelect_for_layout($("select[id^='id_regionview_set-'][id$='-region']").length - 2);
-    });
+      });
+
+      $.cyclope = {access_number: []};
+
+      $("select[id^='id_regionview_set-'][id$='-content_view']").each(function(i, sel){
+          $.cyclope.access_number[i] = 0;
+
+          var prefix = "#id_regionview_set-" + i + "-"
+          var div_container = $("#regionview_set-"+i+"-view_options_multiple").parent().parent();
+
+          if ($("#regionview_set-" + i + "-view_options_multiple").html() === ""){
+              div_container.hide();
+          }
+
+          $(this).change(function(){
+              $.cyclope.access_number[i] += 1;
+              if ($.cyclope.access_number[i] >= 3){
+                  //
+                  //$.cyclope.access_number >= 3 because 2 changes are made by the
+                  //cainedSelect in page load. So the third is the first change made by
+                  //the user.
+                  //
+                  var view_name = $(this).val();
+                  var content_type_id = $(prefix+"content_type  option:selected").val()
+
+                  if (view_name && content_type_id){
+                      $.get("/{{CYCLOPE_PREFIX}}options_view_widget_html",
+                         {
+                            content_type_id: content_type_id,
+                            view_name: view_name,
+                            prefix_name: "regionview_set-"+i+"-"
+                         },
+                         function(data){
+                             if (data){
+                                  $("#regionview_set-" + i + "-view_options_multiple").replaceWith(data);
+                                  div_container.show();
+                              }
+                              else{
+                                  $("#regionview_set-" + i + "-view_options_multiple").html("");
+                                  div_container.hide();
+                              }
+                         });
+                  }
+              }
+          });
+      });
   });
 //]]>
 </script>
