modified hierarchycal_navigation_block template to use region_name instead of region_view template var.

--- a/cyclope/core/collections/templates/collections/hierarchycal_navigation_block.html
+++ b/cyclope/core/collections/templates/collections/hierarchycal_navigation_block.html
@@ -1,6 +1,6 @@
 {% if category.collection.visible %}
 
-  {% if not region_view %}
+  {% if not region_name %}
   <div id="categories_navigation" class="{{ category.collection.slug }} {{ category.slug }}">
     {% if category.parent %}
       <a href="{% url category-default category.parent.slug %}" class="parent">{{ category.parent.name }}</a>
